
This file shows the changes in recent releases of MODX. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- [#5068] Move token check for new resources below error validation in processor to prevent bogus duplicate resource issue
- [#4945] Remove weblink content maxlength restriction
- [#5270] Enable container drag 'n drop in Extended Fields tree
- [#4790] Add support for comment tag token, e.g. [[- comments here]]
- [#5539] Add back in compress_css/js for allowing toggling of js/css compression in manager
- [#5556] Enable connection pooling with master/slave support
- [#5499] Ensure modFile create returns boolean
- [#5501] Add sanity checks on FC rules renameTab and hideField
- [#5505] Fix issue with dropdowns in Fx5
- Enable modTag elements to accept property sets
- Enable modElement->getPropertySet() to merge @propertyset in name with property set specified in setName parameter
- Allow modParser->getElement() method to accept @propertySet in name parameter
- Prevent modParser->parsePropertyString() from trimming all backticks at beginning and end of string
- Improve parser efficiency by returning results of nested tags if elementOutput is null|false
- [#5392] Fix bug where policy template descriptions were not translated
- [#5377] Fix modParser->isProcessingTag() bug preventing filtering on placeholder tags
- Pass content by reference to OnParseDocument event
- Add message_key and json message_format option to system/registry/register/send processor
- Allow raw messages to be returned from system/registry/register/read processor
- Add include_keys option to modRegister implementations
- [#5336] Prefix non-core actions in the MODx.action JS object with their namespace
- Avoid setting description to null in element/propertyset/create processor
- Improve modX->logManagerAction to avoid attempts to insert NULL values
- Accept null options in modHashing->__construct()