@@ -75,7 +75,6 @@ foreach ($nodes as $ar_node) {
     $old_context_key = $node->get('context_key');
     $contextsAffected[$old_context_key] = true;
     if ($old_context_key != $ar_node['context'] && !empty($ar_node['context'])) {
-        changeChildContext($node, $ar_node['context']); /* recursively move children to new context */
         $node->set('context_key',$ar_node['context']);
         $contextsAffected[$ar_node['context']] = true;
         $dontChangeParents[] = $node->get('id'); /* prevent children from reverting back */
@@ -116,7 +115,7 @@ return $modx->error->success();
 
 function getNodesFormatted(&$ar_nodes,$cur_level,$parent = 0,&$ar_contexts = array()) {
     $order = 0;
-    $previous_context = !isset($previous_context) ? null : $previous_context;
+    $previous_context = null;
     foreach ($cur_level as $id => $children) {
         $ar = explode('_',$id);
         if ($ar[1] != '0') {
@@ -135,12 +134,5 @@ function getNodesFormatted(&$ar_nodes,$cur_level,$parent = 0,&$ar_contexts = arr
             $previous_context = $ar[0];
         }
         getNodesFormatted($ar_nodes,$children,$id);
-    }
-}
-
-function changeChildContext(&$node, $context) {
-    foreach ($node->getMany('Children') as $child) {
-        changeChildContext($child, $context);
-        $child->set('context_key', $context);
     }
 }
